# EquiScale

./: .gitignore  README.md  pyproject.toml
config/: concept_map.yaml  inference_settings.yaml  metric_registry.yaml
data/: financials_tracker.db
docs/: README.md  architecture.md  concepts.md  edgar_client.md  how_to.md  metrics.md  objectives.md  statement_mapper.md  useful_queries for_dev.md
financials_tracker/: main.py
financials_tracker/analytics/: financial_dataset.py  metrics_calculator.py  metrics_engine.py
financials_tracker/cli/: aggregate_unmapped_tags.py  debug_capex.py  generate_metrics.py  generate_tag_suggestions.py  init_db.py  rank_unmapped_tags.py  reset_db.py  run_pipeline.py
financials_tracker/mappers/: concept_candidate_ranker.py  concept_map_helper.py  statement_mapper.py  tag_normalization_utils.py
financials_tracker/metrics/: metrics_calculator.py  metrics_engine.py  metrics_registry.py  metrics_registry_helper.py
financials_tracker/storage/: db_setup.py  models.py  repositories.py
financials_tracker/validators/: coverage_validator.py  mapping_detail_validator.py  reconciliation_validator.py  statement_validation_engine.py  unmapped_tags_validator.py  validation_report_helper.py
outputs/validation_reports/: TSLA_income_statement_report.json
src/: main.py
src/cli/: aggregate_unmapped_tags.py  debug_capex.py  generate_metrics.py  generate_tag_suggestions.py  init_db.py  reset_db.py  run_pipeline.py
src/domain/: financial_dataset.py  financial_metrics.py  financial_report.py  report_diagnostics.py
src/storage/: models.py  (+1 more)
(+122 files in other folders)
