[tool.poetry]
name = "financials-tracker"
version = "0.1.0"
description = ""
authors = ["jordi-solsona <disolsons@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
edgartools = "^5.25.1"
pyyaml = "^6.0.3"
pytest = "^9.0.2"
sqlalchemy = "^2.0.48"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
